Import from "@blockprotocol/graph" instead of "type-system"

--- a/libs/block-template-react/package.json
+++ b/libs/block-template-react/package.json
@@ -33,8 +33,7 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@blockprotocol/graph": "0.0.20",
-    "@blockprotocol/type-system": "0.0.4"
+    "@blockprotocol/graph": "0.0.20"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
