ft: service module callbacks

--- a/libs/mock-block-dock/package.json
+++ b/libs/mock-block-dock/package.json
@@ -40,11 +40,14 @@
     "@blockprotocol/core": "0.0.14",
     "@blockprotocol/graph": "0.0.20",
     "@blockprotocol/hook": "0.0.10",
+    "@blockprotocol/service": "0.0.1-canary.2",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@lit-labs/react": "^1.0.4",
     "@mui/material": "5.11.8",
     "ajv": "^8.11.2",
+    "axios": "^1.3.2",
+    "dotenv-webpack": "^8.0.1",
     "echarts": "^5.3.3",
     "mime": "^3.0.0",
     "react-json-view": "^1.21.3",
