--- a/libs/create-block-app/package.json
+++ b/libs/create-block-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-block-app",
-  "version": "0.1.0-canary-20230220234726",
+  "version": "0.0.11",
   "description": "Create new https://blockprotocol.org blocks",
   "keywords": [
     "blockprotocol",
