--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -46,7 +46,7 @@
     "@twind/next": "^1.0.9",
     "ajv": "^8.11.2",
     "algoliasearch": "4.14.2",
-    "axios": "1.2.2",
+    "axios": "^1.3.2",
     "axios-retry": "3.3.1",
     "busboy": "^1.4.0",
     "clsx": "^1.2.1",
