--- a/libs/@local/internal-api-client-generator/typescript/package.json
+++ b/libs/@local/internal-api-client-generator/typescript/package.json
@@ -23,7 +23,7 @@
     "prepare": "yarn build"
   },
   "dependencies": {
-    "axios": "1.2.2"
+    "axios": "^1.3.2"
   },
   "devDependencies": {
     "typescript": "4.9.4"
