fix: restore `dotenv-webpack`

--- a/libs/mock-block-dock/package.json
+++ b/libs/mock-block-dock/package.json
@@ -68,6 +68,7 @@
     "@babel/runtime": "^7.20.6",
     "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
+    "@types/dotenv-webpack": "^7.0.3",
     "@types/mime": "^3.0.1",
     "@types/react-resizable": "^3.0.3",
     "babel-loader": "^9.1.0",
