--- a/libs/@blockprotocol/service/package.json
+++ b/libs/@blockprotocol/service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/service",
-  "version": "0.0.1-canary.2",
+  "version": "0.0.1-canary.9",
   "description": "Implementation of the Block Protocol service module specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -62,6 +62,7 @@
     "@types/geojson": "^7946.0.10",
     "@types/node": "^18.13.0",
     "eslint": "8.33.0",
+    "openai": "^3.1.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "4.9.4",
