--- a/libs/@blockprotocol/graph/package.json
+++ b/libs/@blockprotocol/graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/graph",
-  "version": "0.1.0-canary-20230223145025",
+  "version": "0.0.20",
   "description": "Implementation of the Block Protocol Graph service specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -138,8 +138,8 @@
     "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@blockprotocol/core": "0.1.0-canary-20230223145025",
-    "@blockprotocol/type-system": "0.1.0-canary-20230223145025",
+    "@blockprotocol/core": "0.0.14",
+    "@blockprotocol/type-system": "0.0.4",
     "ajv": "^8.11.2",
     "ajv-formats": "^2.1.1",
     "json-schema-to-typescript": "^11.0.2",
