fix typescript and linting errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [main]
   pull_request:
-    branches: [main]
+    branches: [main, 0.3]
 
 env:
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
