--- a/libs/mock-block-dock/package.json
+++ b/libs/mock-block-dock/package.json
@@ -40,7 +40,7 @@
     "@blockprotocol/core": "0.0.14",
     "@blockprotocol/graph": "0.0.20",
     "@blockprotocol/hook": "0.0.10",
-    "@blockprotocol/service": "0.0.1-canary.2",
+    "@blockprotocol/service": "0.0.1-canary.9",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@lit-labs/react": "^1.0.4",
@@ -48,7 +48,7 @@
     "ajv": "^8.11.2",
     "axios": "^1.3.2",
     "dotenv-webpack": "^8.0.1",
-    "echarts": "^5.3.3",
+    "echarts": "5.4.1",
     "mime": "^3.0.0",
     "react-json-view": "^1.21.3",
     "react-resizable": "^3.0.4",
