restore codegen to pprepare

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "dev": "yarn workspace @apps/site dev",
     "dev:seed-db": "yarn workspace @apps/site dev:seed-db",
     "dev:db": "yarn workspace @apps/site dev:db",
-    "prepare": "patch-package --error-on-warn && turbo run build \"--filter=!./apps/*\""
+    "prepare": "patch-package --error-on-warn && codegen && turbo run codegen && turbo run build \"--filter=!./apps/*\""
   },
   "lint-staged": {
     "**": [
