--- a/libs/@blockprotocol/service/package.json
+++ b/libs/@blockprotocol/service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/service",
-  "version": "0.0.1-canary.9",
+  "version": "0.0.2",
   "description": "Implementation of the Block Protocol service module specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -59,7 +59,6 @@
     "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
     "@mapbox/search-js-core": "^1.0.0-beta.14",
-    "@types/geojson": "^7946.0.10",
     "@types/node": "^18.13.0",
     "eslint": "8.33.0",
     "openai": "^3.1.0",
