put codegen command back in yarn prepare

--- a/turbo.json
+++ b/turbo.json
@@ -22,7 +22,7 @@
       "outputs": []
     },
     "lint:tsc": {
-      "dependsOn": ["codegen", "^build"],
+      "dependsOn": ["^build"],
       "outputs": []
     },
     "test": {
