--- a/libs/block-template-react/package.json
+++ b/libs/block-template-react/package.json
@@ -41,8 +41,8 @@
     "eslint": "8.33.0",
     "mock-block-dock": "0.0.40",
     "prettier": "2.8.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "peerDependencies": {
     "react": "^18.0.0",
