--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -24,6 +24,7 @@
     "@blockprotocol/core": "0.0.14",
     "@blockprotocol/graph": "0.0.20",
     "@blockprotocol/hook": "0.0.10",
+    "@blockprotocol/service": "0.0.1-canary.9",
     "@blockprotocol/type-system": "0.0.4",
     "@cloudflare/stream-react": "^1.8.0",
     "@emotion/cache": "^11.10.0",
