--- a/apps/site/.nycrc.json
+++ b/apps/site/.nycrc.json
@@ -3,5 +3,5 @@
   "all": true,
   "silent": true,
   "include": "apps",
-  "exclude": ["apps/site/.next", "apps/site/public/blocks", "apps/site/tests"]
+  "exclude": ["apps/site/.next", "apps/site/tests"]
 }
