--- a/turbo.json
+++ b/turbo.json
@@ -2,12 +2,7 @@
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
     "build": {
-      "outputs": [
-        "dist/**",
-        ".next/**",
-        "public/blocks/**",
-        "public/schemas/**"
-      ],
+      "outputs": ["dist/**", ".next/**", "public/schemas/**"],
       "dependsOn": ["codegen", "^build"]
     },
     "codegen": {
