--- a/libs/block-template-react/package.json
+++ b/libs/block-template-react/package.json
@@ -66,6 +66,6 @@
     "image": "public/block-preview.png",
     "name": "block-template-react",
     "protocol": "0.3",
-    "schema": "https://blockprotocol-r2l2zq4gf.stage.hash.ai/@blockprotocol/types/entity-type/thing/v/2"
+    "schema": "https://blockprotocol.org/@blockprotocol/types/entity-type/thing/v/2"
   }
 }
