--- a/turbo.json
+++ b/turbo.json
@@ -2,16 +2,11 @@
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
     "build": {
-      "outputs": [
-        "dist/**",
-        ".next/**",
-        "public/blocks/**",
-        "public/schemas/**"
-      ],
+      "outputs": ["dist/**", ".next/**", "public/schemas/**"],
       "dependsOn": ["codegen", "^build"]
     },
     "codegen": {
-      "outputs": ["blocks-data.json", "site-map.json", "src/version.ts"]
+      "outputs": ["site-map.json", "src/version.ts"]
     },
     "fix:eslint": {
       "dependsOn": ["^build"],
