--- a/turbo.json
+++ b/turbo.json
@@ -28,6 +28,10 @@
       "dependsOn": ["codegen"],
       "outputs": ["dist/**", ".next/**", "public/schemas/**"]
     },
+    "@blocks/aio-demo#codegen": {
+      "dependsOn": ["^build"],
+      "outputs": ["src/entity-types/**/*.gen.ts"]
+    },
     "@blockprotocol/type-system#build": {
       "dependsOn": [],
       "outputs": ["dist/**", "wasm/**"]
