--- a/.gitignore
+++ b/.gitignore
@@ -59,13 +59,14 @@ pkg
 target
 wasm-pack.log
 
+## Rollup
+.rollup.cache
+
 ## Workspace-specific
 apps/site/playwright-report
 apps/site/public/schemas
 apps/site/site-map.json
 apps/site/test-results
-libs/@blockprotocol/type-system/.rollup.cache
 libs/@blockprotocol/type-system/wasm
 libs/block-template-html/dev/src
 libs/mock-block-dock/src/version.ts
-
