--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -98,6 +98,7 @@
     "remark-parse": "^10.0.1",
     "rword": "^3.2.1",
     "sanitize-html": "^2.7.2",
+    "semver": "^7.3.8",
     "sharp": "^0.30.7",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.5",
@@ -134,6 +135,7 @@
     "@types/react-html-parser": "^2.0.2",
     "@types/react-slick": "^0.23.10",
     "@types/sanitize-html": "^2.6.2",
+    "@types/semver": "^7.3.13",
     "@types/stripe": "^8.0.417",
     "@types/tar": "^6.1.3",
     "@types/tmp": "^0.2.3",
