WIP - try and generate file type

--- a/libs/@blockprotocol/graph/package.json
+++ b/libs/@blockprotocol/graph/package.json
@@ -133,9 +133,11 @@
     "build": "yarn clean && yarn build:bundle",
     "build:bundle": "node --max-old-space-size=8192 ../../../node_modules/rollup/dist/bin/rollup -c --bundleConfigAsCjs",
     "clean": "rimraf ./dist/",
+    "exe": "node --unhandled-rejections=strict --experimental-loader ts-node/esm/transpile-only --es-module-specifier-resolution=node --require=suppress-experimental-warnings",
     "fix:eslint": "eslint --fix .",
     "lint:eslint": "eslint --report-unused-disable-directives .",
-    "lint:tsc": "tsc --noEmit"
+    "lint:tsc": "tsc --noEmit",
+    "schema": "yarn exe ./scripts/generate-file-type.ts"
   },
   "dependencies": {
     "@blockprotocol/core": "0.0.14",
