--- a/libs/block-template-html/package.json
+++ b/libs/block-template-html/package.json
@@ -34,7 +34,7 @@
   "dependencies": {},
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
-    "block-scripts": "0.1.0-canary-20230228184514",
+    "block-scripts": "0.0.19",
     "eslint": "8.33.0",
     "http-server": "14.1.1",
     "lnk-cli": "1.0.1",
