--- a/libs/block-template-html/package.json
+++ b/libs/block-template-html/package.json
@@ -18,8 +18,8 @@
     "url": "https://hash.ai"
   },
   "scripts": {
-    "build": "rimraf dist && cp -R src dist && cp block-metadata.json dist && cp block-schema.json dist && cp -R public dist",
-    "dev": "echo \"Serving at http://localhost:63212\" && http-server -p 63212 ./dev",
+    "build": "rimraf dist && cp -R src dist && cp block-metadata.json dist && cp -R public dist",
+    "dev": "yarn prepare && echo \"Serving at http://localhost:63212\" && http-server -p 63212 ./dev",
     "fix:eslint": "eslint --fix .",
     "format": "prettier --write --ignore-unknown .",
     "lint:eslint": "eslint --report-unused-disable-directives .",
