--- a/libs/@blockprotocol/type-system/crate/Makefile.toml
+++ b/libs/@blockprotocol/type-system/crate/Makefile.toml
@@ -174,8 +174,11 @@ private = true
 install_crate = { crate_name = "cargo-nextest", version = "0.9.28", binary = "cargo", test_arg = ["nextest", "--version"] }
 
 [tasks.install-wasm-pack]
-private = true
-install_crate = { crate_name = "wasm-pack", version = "0.10.3", binary = "wasm-pack", test_arg = ["--version"] }
+script = """
+if [ ! -f ~/.cargo/bin/wasm-pack ]; then
+  curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh -s -- -f
+fi
+"""
 
 [tasks.install-wasm-opt]
 private = true
