--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -32,6 +32,7 @@
     "@emotion/styled": "^11.10.0",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@hashintel/type-editor": "0.0.17",
     "@istanbuljs/nyc-config-typescript": "1.0.2",
