--- a/libs/@blockprotocol/type-system/crate/Makefile.toml
+++ b/libs/@blockprotocol/type-system/crate/Makefile.toml
@@ -70,7 +70,7 @@ args = ["build", "--profile", "${CARGO_MAKE_CARGO_PROFILE}", "@@split(CARGO_BUIL
 extend = "node"
 cwd = "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}"
 args = ["--loader", "ts-node/esm", "./../scripts/build-wasm.ts"]
-dependencies = ["install-wasm-pack", "install-wasm-opt"]
+dependencies = ["install-wasm-opt"]
 
 ################################################################################
 ## Lints                                                                      ##
@@ -172,13 +172,6 @@ install_crate = { rustup_component_name = "rustfmt" }
 [tasks.install-cargo-nextest]
 private = true
 install_crate = { crate_name = "cargo-nextest", version = "0.9.28", binary = "cargo", test_arg = ["nextest", "--version"] }
-
-[tasks.install-wasm-pack]
-script = """
-if [ ! -f ~/.cargo/bin/wasm-pack ]; then
-  curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh -s -- -f
-fi
-"""
 
 [tasks.install-wasm-opt]
 private = true
