--- a/libs/@blockprotocol/type-system/crate/Cargo.toml
+++ b/libs/@blockprotocol/type-system/crate/Cargo.toml
@@ -32,6 +32,7 @@ wasm-bindgen-test = "0.3.13"
 [profile.release]
 lto = true
 opt-level = 's'
+panic = 'abort'
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
