--- a/libs/@blockprotocol/type-system/crate/Cargo.toml
+++ b/libs/@blockprotocol/type-system/crate/Cargo.toml
@@ -11,6 +11,7 @@ name = "type_system"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+regex = "1.6.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 thiserror = "1.0.32"
