Avoid compiling the `type-system` twice (#1110)
* Avoid compiling the `type-system` twice

* Rename other job as well

* Rename other job as well

* Remove `regex` crate and use `rsplit("v/")` instead

* Revert "Remove `regex` crate and use `rsplit("v/")` instead"

This reverts commit 316b3540f1b04454760527a28570fe5b8edde62a.

* Fix package.json

--- a/libs/@blockprotocol/type-system/package.json
+++ b/libs/@blockprotocol/type-system/package.json
@@ -47,7 +47,7 @@
   "scripts": {
     "build": "yarn clean && yarn build:wasm && yarn build:bundle",
     "build:bundle": "rollup -c --bundleConfigAsCjs",
-    "build:wasm": "cd crate && cargo make build",
+    "build:wasm": "cd crate && cargo make build-wasm-target",
     "clean": "rimraf ./dist/",
     "compressed-size": "yarn build && find dist -iname '*.js' -exec npx terser@latest --compress --mangle --output {} -- {} \\;",
     "fix:eslint": "eslint --fix .",
