--- a/libs/@blockprotocol/type-system/crate/Makefile.toml
+++ b/libs/@blockprotocol/type-system/crate/Makefile.toml
@@ -57,17 +57,19 @@ command = "node"
 [tasks.build]
 category = "Build"
 description = "Builds the package"
-run_task = { name = ["cargo-build-task", "wasm-pack-build-task"] }
+run_task = { name = ["build-host-target", "build-wasm-target"] }
 
-[tasks.cargo-build-task]
+[tasks.build-host-target]
 extend = "cargo"
+private = false
 args = ["build", "--profile", "${CARGO_MAKE_CARGO_PROFILE}", "@@split(CARGO_BUILD_FLAGS, )", "${@}"]
 
 # TODO: add profile
 # TODO: consider moving away from wasm-pack and using wasm-bindgen directly so we can use weak-refs
 #  https://github.com/iotaledger/identity.rs/pull/694
-[tasks.wasm-pack-build-task]
+[tasks.build-wasm-target]
 extend = "node"
+private = false
 cwd = "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}"
 args = ["--loader", "ts-node/esm", "./../scripts/build-wasm.ts"]
 dependencies = ["install-wasm-pack"]
