--- a/libs/@blockprotocol/type-system/package.json
+++ b/libs/@blockprotocol/type-system/package.json
@@ -68,6 +68,7 @@
     "rollup": "3.5.1",
     "ts-jest": "29.0.5",
     "tslib": "2.4.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "wasm-pack": "0.10.3"
   }
 }
