--- a/.prettierignore
+++ b/.prettierignore
@@ -33,6 +33,7 @@ yarn-error.log*
 
 ## Dependency directories
 node_modules
+vendor
 
 ## TypeScript cache
 *.tsbuildinfo
@@ -55,6 +56,7 @@ node_modules
 
 ## Build artifacts
 dist
+build
 
 ## VScode config
 .vscode
