--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
       "libs/@blockprotocol/*",
       "libs/@local/*",
       "libs/@local/internal-api-client-generator/typescript",
-      "libs/*"
+      "libs/!(wordpress-plugin)*"
     ],
     "nohoist": [
       "**/@types/css-font-loading-module",
