--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ yarn-error.log*
 
 ## Dependency directories
 node_modules
-vendor
+vendor/
 
 ## TypeScript cache
 *.tsbuildinfo
@@ -33,7 +33,7 @@ vendor
 
 ## Build artifacts
 dist
-build
+build/
 
 ## VScode config
 .vscode
