--- a/.prettierignore
+++ b/.prettierignore
@@ -33,7 +33,7 @@ yarn-error.log*
 
 ## Dependency directories
 node_modules
-vendor
+vendor/
 
 ## TypeScript cache
 *.tsbuildinfo
@@ -56,7 +56,7 @@ vendor
 
 ## Build artifacts
 dist
-build
+build/
 
 ## VScode config
 .vscode
