--- a/libs/block-template-html/package.json
+++ b/libs/block-template-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "block-template-html",
-  "version": "0.2.0",
+  "version": "0.2.1-canary-20230306142735",
   "description": "Block Protocol block template for an html-based block",
   "keywords": [
     "blockprotocol",
@@ -34,7 +34,7 @@
   "dependencies": {},
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
-    "block-scripts": "0.1.0",
+    "block-scripts": "0.1.1-canary-20230306142735",
     "eslint": "8.33.0",
     "http-server": "14.1.1",
     "lnk-cli": "1.0.1",
