--- a/libs/block-template-react/package.json
+++ b/libs/block-template-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "block-template-react",
-  "version": "0.2.0",
+  "version": "0.2.1-canary-20230306142735",
   "description": "Block Protocol template for a React-based block",
   "keywords": [
     "blockprotocol",
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
     "@types/react-dom": "^18.0.9",
-    "block-scripts": "0.1.0",
+    "block-scripts": "0.1.1-canary-20230306142735",
     "eslint": "8.33.0",
     "mock-block-dock": "0.1.0",
     "prettier": "2.8.2",
