Revert "temporarily convert changesets to canary releases"
This reverts commit 167689e350dc6fbeed7ec742f4c0aa6aad0ec785.

--- a/libs/block-scripts/package.json
+++ b/libs/block-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "block-scripts",
-  "version": "0.1.1-canary-20230306142735",
+  "version": "0.1.0",
   "description": "Block development framework",
   "keywords": [
     "blockprotocol",
