Revert "temporarily convert changesets to canary releases"
This reverts commit e20d07e8ea624145a50862f4ee706f04a4e4a1d3.

--- a/libs/blockprotocol/package.json
+++ b/libs/blockprotocol/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blockprotocol",
-  "version": "0.2.2-canary-20230306175645",
+  "version": "0.2.1",
   "description": "Command Line Interface (CLI) for the Block Protocol API",
   "keywords": [
     "blockprotocol",
