--- a/libs/block-template-custom-element/package.json
+++ b/libs/block-template-custom-element/package.json
@@ -1,6 +1,6 @@
 {
   "name": "block-template-custom-element",
-  "version": "0.2.1-canary-20230306175645",
+  "version": "0.2.0",
   "description": "Block Protocol block template for a custom element-based block",
   "keywords": [
     "blockprotocol",
@@ -39,9 +39,9 @@
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
     "@types/react-dom": "^18.0.9",
-    "block-scripts": "0.1.1-canary-20230306175645",
+    "block-scripts": "0.1.0",
     "eslint": "8.33.0",
-    "mock-block-dock": "0.1.1-canary-20230306175645",
+    "mock-block-dock": "0.1.0",
     "prettier": "2.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
