--- a/libs/mock-block-dock/package.json
+++ b/libs/mock-block-dock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mock-block-dock",
-  "version": "0.1.1-canary-20230306175645",
+  "version": "0.1.0",
   "description": "A mock embedding application for Block Protocol blocks",
   "keywords": [
     "blockprotocol",
@@ -40,7 +40,7 @@
     "@blockprotocol/core": "0.1.0",
     "@blockprotocol/graph": "0.1.0",
     "@blockprotocol/hook": "0.1.0",
-    "@blockprotocol/service": "0.1.1-canary-20230306175645",
+    "@blockprotocol/service": "0.1.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@lit-labs/react": "^1.0.4",
