--- a/libs/@blockprotocol/service/package.json
+++ b/libs/@blockprotocol/service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/service",
-  "version": "0.1.0",
+  "version": "0.1.1-canary-20230306175645",
   "description": "Implementation of the Block Protocol service module specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
