--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ yarn-error.log*
 
 ## Dependency directories
 node_modules
+vendor/
 
 ## TypeScript cache
 *.tsbuildinfo
@@ -32,6 +33,7 @@ node_modules
 
 ## Build artifacts
 dist
+build/
 
 ## VScode config
 .vscode
