update error codes, use service json generator

--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -24,6 +24,7 @@
     "@blockprotocol/core": "0.1.0",
     "@blockprotocol/graph": "0.1.0",
     "@blockprotocol/hook": "0.1.0",
+    "@blockprotocol/service": "0.1.0",
     "@blockprotocol/type-system": "0.1.0",
     "@cloudflare/stream-react": "^1.8.0",
     "@emotion/cache": "^11.10.0",
