--- a/libs/mock-block-dock/tsconfig.json
+++ b/libs/mock-block-dock/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@local/tsconfig/dom+jsx.json",
-  "include": ["src"],
+  "include": ["assets.d.ts", "dev", "src"],
   "compilerOptions": {
     "outDir": "dist"
   }
