Opt for Type ID instead of Versioned URL in most places

--- a/libs/block-template-custom-element/package.json
+++ b/libs/block-template-custom-element/package.json
@@ -70,7 +70,7 @@
       "targets": {
         "thing.ts": [
           {
-            "versionedUrl": "https://blockprotocol.org/@blockprotocol/types/entity-type/thing/v/2",
+            "sourceTypeId": "https://blockprotocol.org/@blockprotocol/types/entity-type/thing/v/2",
             "blockEntity": true
           }
         ]
