Add demonstration of multiple codegen blockEntity defs

--- a/libs/block-template-react/package.json
+++ b/libs/block-template-react/package.json
@@ -74,6 +74,10 @@
           {
             "sourceTypeId": "https://blockprotocol.org/@blockprotocol/types/entity-type/thing/v/2",
             "blockEntity": true
+          },
+          {
+            "sourceTypeId": "https://blockprotocol.org/@blockprotocol/types/entity-type/person/v/2",
+            "blockEntity": true
           }
         ]
       }
